--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Sultan1992/portfolioPage.git"
+    "url": "https://github.com/Sultan1992/portfolioPage.git"
   },
   "author": "sultan feto",
   "license": "ISC",
